@@ -50,7 +50,7 @@ class QueryExecutorColumns : public QueryExecutorStep
          * @param rowIdColumn Indicates if this is a call for ROWID column added by QueryExecutorRowId step.
          * @return Result column object ready for rebuilding tokens and detokenizing.
          */
-        SqliteSelect::Core::ResultColumn* getResultColumnForSelect(const QueryExecutor::ResultColumnPtr& resultColumn, const SelectResolver::Column& col, bool rowIdColumn);
+        SqliteSelect::Core::ResultColumn* getResultColumnForSelect(const QueryExecutor::ResultColumnPtr& resultColumn, const SelectResolver::Column& col);
 
         /**
          * @brief Translates attach name into database name.
@@ -67,8 +67,8 @@ class QueryExecutorColumns : public QueryExecutorStep
         bool isRowIdColumnAlias(const QString& alias);
 
         void wrapWithAliasedColumns(SqliteSelect* select);
-
-        QString getAliasedColumnNameForSqlite2(const QueryExecutor::ResultColumnPtr& resCol);
+        bool isRowIdColumn(const QString& columnAlias);
+        QStringList rowIdColNames;
 };
 
 #endif // QUERYEXECUTORCOLUMNS_H
